# machgate

./: .gitignore  .gitmodules  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  CMakeLists.txt  README.md
.github/docker/: arm64-toolchain.Dockerfile
.github/workflows/: ci.yml  external-macho.yml  release.yml
docs/: AGY_CLI_USAGE.md  APPLE_OPEN_SOURCE_REFERENCES.md  CATCH2_STATIC_INIT_EXTERNAL_LOOP.md  DARWIN_SYSCALL_TABLE_STATUS.md  EXTERNAL_MACHO_CLI_PROBES.md  EXTERNAL_MACHO_ERROR_FIX_LOOP.md  EXTERNAL_MACHO_EXPANSION_PLAN.md  EXTERNAL_MACHO_FIX_LOOP_2.md  EXTERNAL_MACHO_LIVE_STATUS.md  EXTERNAL_MACHO_UNIFIED_STATUS.md  GEMINI_CLI_USAGE.md  GROK_CLI_USAGE.md  HOST_GLIBC_BYPASS_FAILURES.md  LOADER_CONTRACT.md  LOCAL_AGENT_AND_TOOLCHAIN_STATUS.md  LOOP_ENGINEERING.md  PACKER_SIGCHLD_FIX.md  PENDING_EXTERNAL_FIX_LOOP_PLAN.md  RUST_EXPANSION_LIVE_STATUS.md  SYSCALL_PATCHING.md  SYSCALL_TRANSLATION_EXECUTION_PLAN.md  SYSCALL_TRANSLATION_PLAN.md
docs/external-fix-workers/: canonical-merge.md  go-lcmain-abi.md  go-startup.md  loader-env.md  lse-islands.md  remaining-shims.md  rust-just-startup.md  shim-surface.md  syscall-islands.md  worker5-real-failures.md
docs/external-fix-workers/allocator-contract/: EXTERNAL_AGENT_STATUS.md  FINDINGS.md  README.md  agy-prompt.txt  agy-report.txt  claude-prompt.txt  grok-prompt.txt  grok-report.txt
docs/external-workers/: worker-1.md  worker-2.md  worker-3.md  worker-4.md  worker-5.md
examples/sugar/: dylib_map.conf  dylib_map_sdl3.conf  machismo-sdl2.conf  machismo-sdl3.conf  machismo.conf
examples/sugar/patches/: shotgun-king-sdl3.conf  shotgun-king.conf  wratchs-den.conf
examples/sugar/src/: audio_cache.c  audio_cache.h  game_patches.c  ogg_cache.c  ogg_cache.h  sugar_audio_sdl2.c  sugar_audio_sdl3.c  sugar_flip.c  sugar_shader_bypass_sdl2.c
examples/sugar/tools/: pcm_cache_write.c
patches/: gl4es-red-integer.patch  libcxx-darwin-pthread-compat.patch
scripts/: audit_macho_import_ownership.py  build-gl4es.sh  build-libcxx.sh  build-luajit.sh  gen_pcm_cache_manifest.py  libcxx_allocator_overlay.c  run-macho-docker.sh
src/: arm64_enc.h  bgfx_shim.c  bgfx_shim.h  config.c  config.h  dylib_loader.c  dylib_loader.h  eh_frame.c  eh_frame.h  guest_call.S  isa_emul.c  isa_emul.h  loader.c  loader.h  lua_entity_opt.c  machgate.c  machismo.c  macho_defs.h  patcher.c  patcher.h  resolver.c  resolver.h  sdl_window_shim.c  sdl_window_shim.h  stack.c  trampoline.c  trampoline.h  vm_interpose.c  vm_interpose.h  vm_interpose_loader.c
src/elfcalls/: threads.c
src/shim/: libgalaxy_shim.c  libgalaxy_shim.ver  libsystem_shim.c  libsystem_shim.ver
src/stubs/: apple_abi.h
src/syscall/: execve_reexec.c  execve_reexec.h  guest_vm_dispatch.c  guest_vm_dispatch.h  guest_vm_track.c  guest_vm_track.h  syscall_gate.c  syscall_gate.h  syscall_range_000_099.c  syscall_range_000_099.h  syscall_range_100_199.c  syscall_range_100_199.h  syscall_range_200_399.c  syscall_range_200_399.h  syscall_range_400_plus.c  syscall_range_400_plus.h
tests/: repro_panicwrap_self_reexec.sh  run_tests.sh  test_allocator_export_surface.sh  test_build.sh  test_commpage.sh  test_cpp_many_ctors.sh  test_darwin_execve.sh  test_darwin_exit42.sh  test_darwin_fstat.sh  test_darwin_mmap_protect.sh  test_darwin_open_lseek.sh  test_darwin_range_000_099.sh  test_darwin_range_100_199.sh  test_darwin_range_200_399.sh  test_darwin_range_400_plus.sh  test_darwin_read_close.sh  test_darwin_write_stdout.sh  test_external_macho_cli.sh  test_fat_binary.sh  test_guest_cxx_allocator_bridge_config.sh  test_lc_main.sh  test_libcxx_allocator_overlay.sh  test_libcxx_tree_repair.c  test_libcxx_tree_repair.sh  test_libsystem_shim.sh  test_lse_emul.c  test_necrodancer_integration.sh  test_necrodancer_parse.sh  test_parse_exit0.sh  test_parse_hello.sh  test_parse_static.sh  test_resolver_mapping.sh  test_resolver_parse.sh  test_resolver_rebase.sh  test_trampoline_basic.sh  test_wrapgen_basic.sh  test_wrapgen_symbols.sh
tests/fixtures/: build_fixtures.sh  darwin_execve_exit42.s  darwin_exit42.s  darwin_fork_exec_self.s  darwin_fstat.s  darwin_mmap_protect.s  darwin_open_lseek.s  darwin_panicwrap_self_reexec.s  darwin_range_000_099.s  darwin_range_100_199.s  darwin_range_200_399.s  darwin_range_400_plus.s  darwin_read_close.s  darwin_write_stdout.s  syscall_data.txt
tools/: .gitignore  sgr_extract.c  sgr_extract_old.c  sgr_repack.c  sgr_repack_old.c
